--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/cloudinary-core-1.2.2.jar')
     compile files('libs/cloudinary-android-1.2.2.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services-location:8.1.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.firebase:geofire-android:2.1.0'
+
+
+
+
 }
+
